--- a/EasyDemo/EasyDemo.Android/EasyDemo.Android.csproj
+++ b/EasyDemo/EasyDemo.Android/EasyDemo.Android.csproj
@@ -193,6 +193,8 @@
     <Compile Include="Helper\Connection.cs" />
     <Compile Include="LoginActivity.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="Models\DataConnection.cs" />
+    <Compile Include="Models\Users.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
